# akhilsadam.github.io

./: Cargo.toml  Makefile  Trunk.toml  build.sh  cv-print_wip.css  frontend-375cea3cff1c0927.js  frontend-375cea3cff1c0927_bg.wasm  frontend-5756061ebc40aee8.js  frontend-5756061ebc40aee8_bg.wasm  frontend-d781e1a18486cfd8.js  frontend-d781e1a18486cfd8_bg.wasm  frontend-de2d52514011e852.js  frontend-de2d52514011e852_bg.wasm  frontend-f6aff4f90df77757.js  frontend-f6aff4f90df77757_bg.wasm  frontend-f961d89e90dc3985.js  frontend-f961d89e90dc3985_bg.wasm  index.html  main-1b84e8f808dd6615.css  main-eb7e45769d6d9af6.css  main-ef2eb92dceb4393.css  package.json  tailwind.config.cjs  webpack.config.cjs  webpack.config.js
.github/workflows/: publish_gh_pages.yml
css/: bars.css  color.css  column.css  custom.css  cv.css  darkbar.css  font.css  fonts.css  index.css  index.scss  layout.css  lightbar.css  main.css  mixblend_disable.css  music.css  sc.css  sp.css
src/: main.rs
src/config/: mod.rs
src/content/arch/: arch.md
src/content/cv/: cv.md  gen.py  layout.md  make.py  resume.md
src/content/home/: about.md  main.md  (+5 more)
src/default/: mod.rs
src/projects/: default.rs  mod.rs  tree.py
static/css/: card-inner.css  card.css  cv-print.css  cv.css  layout-poster.css  phogroup.css  shubun.css  slideshow.css
static/img/: notes.txt
static/js/: art.js  audioplayer.js  autoplay.js  card.js  custom.js  daynight.js  sc_art.js  scrollMain.js
static/pages/: MiniPET-Reconstruction.html
static/photoswipe/: photoswipe.css  photoswipe_me.css
static/templates/: audioplayer.html
(+43 files in other folders)
