[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = "1.0.117"
serde_derive = "1.0.137"
reqwasm = "0.5.0"
gloo = "0.7.0"
yew-router = "0.16.0"
toml = "0.5.9"

[dependencies.web-sys]
version = "0.3.56"
features = [
    "HtmlInputElement",
]
